# multiz

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  README2  align_util.c  align_util.h  maf.c  maf.h  multi_util.c  multi_util.h  multic.c  multiz.c  mz_preyama.c  mz_preyama.h  mz_scores.c  mz_scores.h  mz_yama.c  seq.c  seq.h  util.c  util.h
test/: S288cvsRM11_1a.maf  S288cvsSpar.maf  test.sh
